Remove fixed ByteBuddy javaagent from tests